hugoed & debugged second-card mobile

--- a/hugo/themes/cca-general/layouts/partials/footer.html
+++ b/hugo/themes/cca-general/layouts/partials/footer.html
@@ -7,7 +7,7 @@
                <div class="row">
                     <div class="col-xs-12">
                         <div class="logo">
-                            <img class="img-fluid orange-logo" src="images/logored.png">
+                            <img class="img-fluid orange-logo" src="{{ "images/logored.png" | absURL }}">
                         </div>
 
                         <div class="phone-number">
@@ -219,7 +219,7 @@
 
         <div class="row copy-privacy">
             <div class="col-md-3 offset-md-1 col-sm-12">
-               <img id="mobile-footer-logo" src="images/logored.png">
+               <img id="mobile-footer-logo" src="{{ "images/logored.png" | absURL }}">
                 <p>&copy;2018 All Rights Reserved. Cloud.ca</p>
                 <p class="privacy"> <a href="#">Privacy and Terms</a> </p>
             </div>
