--- a/hugo/themes/cca-general/layouts/partials/homepage/features-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/features-card.html
@@ -8,29 +8,29 @@
         <div class="tech-brief">
             <div class="row">
                 <div class="col-md-2 offset-md-2 col-sm-12">
-                    <img src="images/elastic-compute.png">
+                    <img src="{{ "images/elastic-compute.png" | absURL }}">
                     <p>Elastic compute</p>
                 </div>
                 <div class="col-md-2 offset-md-1 col-sm-12">
-                    <img class="img-fluid" src="images/performant-multi-tenant-storage.png">
+                    <img class="img-fluid" src="{{ "images/performant-multi-tenant-storage.png" | absURL }}">
                     <p>Performant multi-tenant storage</p>
                 </div>
                 <div class="col-md-2 offset-md-1 col-sm-12">
-                    <img class="img-fluid" src="images/multi-tiered-networking.png">
+                    <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
                     <p>Multi-tiered networking</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-2 offset-md-2 col-sm-12">
-                    <img class="img-fluid" src="images/integrated-devops-tooling.png">
+                    <img class="img-fluid" src="{{ "images/integrated-devops-tooling.png" | absURL }}">
                     <p>Integrated DevOps Tooling</p>
                 </div>
                 <div class="col-md-2 offset-md-1 col-sm-12">
-                    <img class="img-fluid" src="images/dedicated-infrastructure.png">
+                    <img class="img-fluid" src="{{ "images/dedicated-infrastructure.png" | absURL }}">
                     <p>Dedicated infrastructure</p>
                 </div>
                 <div class="col-md-2 offset-md-1 col-sm-12">
-                    <img class="img-fluid" src="images/bare-metal-servers.png">
+                    <img class="img-fluid" src="{{ "images/bare-metal-servers.png" | absURL }}">
                     <p>Bare-metal servers</p>
                 </div>
             </div>
