--- a/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
@@ -10,7 +10,7 @@
         <div class="row ">
             <div class="col-md-2 offset-md-7 col-sm-6">
                 <img class="img-cube-desktop" src="{{ "images/cube.png" | absURL }}">
-                <img class="img-cube-mobile" src="images/cube-gradient.png">
+                <img class="img-cube-mobile" src="{{ "images/cube-gradient.png" | absURL }}">
             </div>
         </div>
     </div>
