styling details, bugs fixed

--- a/hugo/themes/cca-general/layouts/partials/footer.html
+++ b/hugo/themes/cca-general/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer card-section">
+<footer class="footer card-section" id="footer">
     <div class="container-fluid">
 
         <div class="row"> <!-- primary row -->
@@ -10,11 +10,11 @@
                             <img class="img-fluid orange-logo" src="{{ "images/logored.png" | absURL }}">
                         </div>
 
-                        <div class="phone-number">
+                        <div class="phone-number contact-info">
                             <a href="tel:+18887968364">1-888-796-8364</a>
                         </div>
 
-                        <div class="email">
+                        <div class="email contact-info">
                             <a href="#">info@cloud.ca</a>
                         </div>
                    </div>
@@ -45,7 +45,7 @@
                 </div>
             </div> <!-- logo etc -->
 
-            <div class="toggle-footer col-sm-12 d-sm-none"> <!-- menu items column -->
+            <div class="toggle-footer col-sm-12 d-md-none"> <!-- menu items column -->
                 <button
                     type="button"
                     class="btn d-md-none collapse-footer collapsed"
