--- a/hugo/themes/cca-general/layouts/partials/homepage/features-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/features-card.html
@@ -1,4 +1,4 @@
-<div class="white-card card-section">
+<div class="features-card card-section">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 card-title">
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="row text-row-whitecard">
+        <div class="row text-row-features-card">
             <div class="col-sm-12 card-title">
                 <h4>Workloads running on cloud.ca</h4>
             </div>
