--- a/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
@@ -1,8 +1,8 @@
-<div class="redorange-card card-section">
-    <div id="title-row-orangecard">
+<div class="second-card card-section">
+    <div id="title-row-secondcard">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-5 offset-md-2 col-sm-12">
                     <h2>but they don't have to be</h2>
                 </div>
             </div>
@@ -15,14 +15,14 @@
         </div>
     </div>
 
-    <div class="row text-row-orangecard">
+    <div class="row text-row-secondcard">
         <div class="col-md-4 offset-md-1 col-sm-12">
             <h4>Our Infrastructure as a Service (laaS) is purpose built for:</h4>
             <ul>
-                <li>Data Sovereignty</li>
-                <li>Performance &amp; Security</li>
-                <li>Simplified Self-service</li>
-                <li>Cloud automation</li>
+                <li class="important-item">- Data Sovereignty</li>
+                <li>- Performance &amp; Security</li>
+                <li>- Simplified Self-service</li>
+                <li>- Cloud automation</li>
             </ul>
         </div>
 
