--- a/hugo/themes/cca-general/layouts/partials/navbar.html
+++ b/hugo/themes/cca-general/layouts/partials/navbar.html
@@ -1,6 +1,6 @@
-<nav id="navbar" class="navbar fixed-top navbar-expand-lg" role="navigation">
+<nav id="navbar" class="navbar fixed-top navbar-expand-xl" role="navigation">
     <a class="navbar-brand" href="#">
-    <img class="logo-red" src="{{ "images/logored.png" | absURL }}" alt="cloud.ca">
+    <img class="logo-red" src="{{ "images/logo-red-navbar.png" | absURL }}" alt="cloud.ca">
     <img class="logo-white" src="{{ "images/logowhite.png" | absURL }}" alt="cloud.ca">
     </a>
 
@@ -30,7 +30,7 @@
                                 </ul>
                             </div>
                         </div>
-                        
+
                  </div>
             </li>
             <li class="nav-item dropdown">
@@ -58,7 +58,7 @@
                                 </ul>
                             </div>
                         </div>
-                        
+
                  </div>
             </li>
 
@@ -86,7 +86,7 @@
                                 </ul>
                             </div>
                         </div>
-                        
+
                  </div>
             </li>
             <li class="nav-item dropdown">
