--- a/hugo/themes/cca-general/layouts/partials/homepage/first-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/first-card.html
@@ -1,4 +1,4 @@
-<div class="bluered-card card-section">
+<div class="first-card card-section">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 card-title">
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="row complex-clouds">
-            <div class="col-md-5 col-sm-8">
+            <div class="col-md-4 offset-md-2 col-sm-8">
                 <h2>Clouds are complex...</h2>
             </div>
             <div class="col-lg-4 offset-1 col-sm-4 img-triangle">
