Everything done except Parallax

--- a/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
@@ -29,7 +29,9 @@
         <div class="col-md-4 offset-md-1 col-sm-12">
             <h4>Cloud.ca is not a hyperscale cloud, here is how we are different:</h4>
             <p>A Canadian-owned provider with a vested interest in your data security. Consume cloud your way: flexible offerings and pricing structures. Easy access to a team that supports your business success and unique needs.</p>
-            <a href="#">Learn more</a>
+            <div class="learn-more-second-card">
+                <a href="#">Learn more</a>
+            </div>
         </div>
     </div>
 </div>
