tablet version completed

--- a/hugo/themes/cca-general/layouts/partials/footer.html
+++ b/hugo/themes/cca-general/layouts/partials/footer.html
@@ -3,9 +3,9 @@
 
         <div class="row"> <!-- primary row -->
 
-            <div class="col-md-2 offset-md-1 col-sm-12"> <!-- logo etc -->
+            <div class="col-lg-2 offset-lg-1 col-sm-12"> <!-- logo etc -->
                <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-sm-12">
                         <div class="logo">
                             <img class="img-fluid orange-logo" src="{{ "images/logored.png" | absURL }}">
                         </div>
@@ -141,10 +141,10 @@
                 </div><!-- menu items row -->
             </div> <!-- menu items column -->
 
-            <div class="col-md-9"> <!-- menu items column -->
+            <div class="col-lg-9"> <!-- menu items column -->
                 <div class="row" id="desktop-menu">
 
-                    <div class="col-md-3 why-cloudca">
+                    <div class="col-lg-3 why-cloudca">
                         <h5>Why cloud.ca</h5>
                         <ul>
                             <li><a href="#">Hyperscale comparison</a></li>
@@ -153,7 +153,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3 general">
+                    <div class="col-lg-3 general">
                         <h5>General</h5>
                         <ul>
                             <li><a href="#">About us</a></li>
@@ -165,7 +165,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3 sales">
+                    <div class="col-lg-3 sales">
                         <h5>Sales</h5>
                         <ul>
                             <li><a href="#">Contact us</a></li>
@@ -174,7 +174,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3 support">
+                    <div class="col-lg-3 support">
                         <h5>Support</h5>
                         <ul>
                             <li><a href="#">Get support</a></li>
@@ -185,7 +185,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3 developers">
+                    <div class="col-lg-3 developers">
                         <h5>Developers</h5>
                         <ul>
                             <li><a href="#">API docs</a></li>
@@ -193,7 +193,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3 product">
+                    <div class="col-lg-3 product">
                         <h5>Product</h5>
                         <ul>
                             <li><a href="#">Multi-tenant cloud</a></li>
@@ -203,7 +203,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3 pricing">
+                    <div class="col-lg-3 pricing">
                         <h5>Pricing</h5>
                         <ul>
                             <li><a href="#">Option 1</a></li>
@@ -218,7 +218,7 @@
 
 
         <div class="row copy-privacy">
-            <div class="col-md-3 offset-md-1 col-sm-12">
+            <div class="col-lg-3 offset-lg-1 col-sm-12">
                <img id="mobile-footer-logo" src="{{ "images/logored.png" | absURL }}">
                 <p>&copy;2018 All Rights Reserved. Cloud.ca</p>
                 <p class="privacy"> <a href="#">Privacy and Terms</a> </p>
