--- a/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/second-card.html
@@ -5,14 +5,14 @@
             <div class="col-lg-4 offset-lg-2 col-sm-8 but-they-dont-have-to-be">
                 <h2>but they don't have to be</h2>
             </div>
-            <div class="col-lg-4 offset-lg-1 col-sm-4">
+            <div class="img-cube">
                 <img class="img-cube-desktop" src="{{ "images/cube.png" | absURL }}">
                 <img class="img-cube-mobile" src="{{ "images/cube-gradient.png" | absURL }}">
             </div>
         </div>
 
         <div class="row text-row-secondcard">
-            <div class="col-md-4 offset-md-1 col-sm-12">
+            <div class="col-lg-4 offset-lg-1 col-md-7 col-sm-12">
                 <h4>Our Infrastructure as a Service (laaS) is purpose built for:</h4>
                 <ul>
                     <li class="important-item">- Data Sovereignty</li>
@@ -22,7 +22,7 @@
                 </ul>
             </div>
 
-            <div class="col-md-4 offset-md-1 col-sm-12">
+            <div class="col-lg-4 offset-lg-1 col-md-7 col-sm-12">
                 <h4>Cloud.ca is not a hyperscale cloud, here is how we are different:</h4>
                 <p>A Canadian-owned provider with a vested interest in your data security. Consume cloud your way: flexible offerings and pricing structures. Easy access to a team that supports your business success and unique needs.</p>
                 <div class="learn-more-second-card">
