--- a/hugo/public/css/style.css
+++ b/hugo/public/css/style.css
@@ -59,9 +59,6 @@ li {
     font-family: "Proxima-Nova", sans-serif;
 }
 
-#homepage .card-section {
-    padding: 100px 0;
-}
 
 /* NAVBAR */
 #navbar {
@@ -163,7 +160,7 @@ li {
 
     background: -webkit-linear-gradient(#f5f7f1, #ccc);
     background: -o-linear-gradient(#f5f7f1, #ccc);
-    background: -moz-linear-gradient(#f5f7f1, #ccc));
+    background: -moz-linear-gradient(#f5f7f1, #ccc);
     background: linear-gradient(#f5f7f1, #ccc);
 
     width: auto;
@@ -257,9 +254,6 @@ li {
     transform: translateX(100%);
     -webkit-transition: 300ms ease;
     transition: 300ms ease;
-    @include media-breakpoint-up(xs) { width: 100% };
-    @include media-breakpoint-up(sm) { width: 50% };
-    @include media-breakpoint-up(md) { width: 25% };
 }
 
 #navbar .close-side-button {
@@ -323,11 +317,11 @@ li {
     background: -moz-linear-gradient(#ec1c23, #1d2671);
     background: linear-gradient(#ec1c23, #1d2671);
 
-    padding-bottom: 350px;
     color: #f5f7f1;
     font-family: "Proxima-Nova", sans-serif;
     position: relative;
     z-index: 100;
+    /* margin-top: 100px; */
 }
 
 #homepage .first-card .complex-clouds {
@@ -335,7 +329,7 @@ li {
 }
 
 #homepage .first-card h3 {
-    padding-top: 130px;
+    padding-top: 230px;
 }
 
 #homepage .first-card h4 {
@@ -346,14 +340,12 @@ li {
     text-align: center;
 }
 
-#homepage .fixed {
+#homepage .first-card.fixed .complex-clouds {
     position: fixed;
-    bottom: 100px;
-}
+    top: 100px;
+    left: 15px;
 
-#homepage .relative {
-    position: relative;
-    bottom: 100px;
+    width: 100%;
 }
 
 /*MOBILE FIRST CARD*/
@@ -397,6 +389,9 @@ li {
 
 /* SECOND CARD */
 #homepage .second-card {
+    box-sizing: content-box;
+    padding: 0 0 100px 0;
+
     /* For browsers that do not support gradients */
     background: #f16529;
 
@@ -405,7 +400,6 @@ li {
     background: -moz-linear-gradient(#f16529, #ec1c23);
     background: linear-gradient(#f16529, #ec1c23);
 
-    padding: 100px 0;
     color: #f5f7f1;
     font-family: "Proxima-Nova", sans-serif;
 
@@ -419,8 +413,39 @@ li {
     font-weight: bold;
 }
 
+#homepage .second-card.fixed .title-row-secondcard {
+    clip: rect(0, 0, 0, 0);
+    padding: 0;
+    position: fixed;
+    top: 100px;
+    left: 15px;
+
+    width: 100%;
+}
+
+#homepage .second-card .title-row-secondcard {
+    padding: 100px 0 0 0;
+}
+
+#homepage .second-card.fixed .text-row-secondcard {
+    opacity: 0;
+    transition: all linear 0.5s;
+
+    position: absolute;;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
 #homepage .second-card .text-row-secondcard {
-    padding-top: 200px;
+    padding-top: 0;
+    margin: 0 0 50px 0;
+    opacity: 1.0;
+    transition: all linear 1s;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 #homepage .second-card .text-row-secondcard li.important-item {
@@ -451,9 +476,13 @@ li {
         display: none;
 }
 
+#homepage .but-they-dont-have-to-be {
+    margin-bottom: 223px;
+}
  #homepage .img-cube-desktop {
-       position: relative;
-    }
+     position: relative;
+     margin: 0 0 -540px 131px;
+}
 
 /*MOBILE SECOND CARD*/
 @media screen and (max-width : 768px) {
@@ -475,7 +504,7 @@ li {
         margin: 70px 0 30px -20px;
         float: right;
         position: relative;
-        display:block;
+        display: block;
     }
 
     #homepage .second-card .text-row-secondcard {
@@ -514,7 +543,7 @@ li {
     background-color: #f5f7f1;
     text-align: center;
     color: #ec1c23;
-
+    padding: 100px 0;
     position: relative;
     z-index: 300;
 }
@@ -548,13 +577,22 @@ li {
         height: 230px;
     }
 
-    #homepage .features-card .card-section .workloads-row p {
+    #homepage .features-card .card-section .workloads p {
         margin-left: 40px;
     }
 }
 /* CALL TO ACTION CARD */
-/* Inherits backgrouds and link colors from SECOND CARD */
 #homepage .call-to-action-card {
+    background: #f16529;
+
+    background: -webkit-linear-gradient(#f16529, #ec1c23);
+    background: -o-linear-gradient(#f16529, #ec1c23);
+    background: -moz-linear-gradient(#f16529, #ec1c23);
+    background: linear-gradient(#f16529, #ec1c23);
+
+    color: #f5f7f1;
+    font-family: "Proxima-Nova", sans-serif;
+
     position: relative;
     z-index: 400;
 }
@@ -566,10 +604,16 @@ li {
     text-align: center;
     margin-top: auto;
     margin-bottom: auto;
+    color: #fff;
+}
+
+#homepage .call-to-action-card a:link {
+    color: #f5f7f1;
 }
 
 #homepage .call-to-action-card .cta-block {
     text-align: center;
+    padding: 100px 0;
 }
 
 #homepage .call-to-action-card::before {
@@ -579,8 +623,8 @@ li {
     height: 100%;
     border-style: solid;
     border-width: 1px;
-    border-color: white;
-    background-color: white;
+    border-color: #f5f7f1;
+    background-color: #f5f7f1;
     opacity: 0.5;
     border-radius: 1px;
     position: absolute;
@@ -608,7 +652,7 @@ li {
     #homepage .call-to-action-card .row .col-sm-12::after {
         content: '';
 
-        background: white;
+        background: #f5f7f1;
         width: 50px;
         height: 2px;
         opacity: 0.5;
@@ -655,6 +699,7 @@ li {
 }
 
 #footer.footer.card-section {
+    padding-top: 100px;
      padding-bottom: 20px;
 }
 
