--- a/hugo/themes/cca-general/layouts/partials/homepage/features-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/features-card.html
@@ -6,30 +6,30 @@
                 <h4>Technical Brief</h4>
 
                 <div class="row">
-                    <div class="col-md-2 offset-md-2 col-sm-12">
+                    <div class="col-lg-2 offset-lg-2 col-sm-12">
                         <img src="{{ "images/elastic-compute.png" | absURL }}">
                         <p>Elastic compute</p>
                     </div>
-                    <div class="col-md-2 offset-md-1 col-sm-12">
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
                         <img class="img-fluid" src="{{ "images/performant-multi-tenant-storage.png" | absURL }}">
                         <p>Performant multi-tenant storage</p>
                     </div>
-                    <div class="col-md-2 offset-md-1 col-sm-12">
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
                         <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
                         <p>Multi-tiered networking</p>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-2 offset-md-2 col-sm-12">
+                    <div class="col-lg-2 offset-lg-2 col-sm-12">
                         <img class="img-fluid" src="{{ "images/integrated-devops-tooling.png" | absURL }}">
                         <p>Integrated DevOps Tooling</p>
                     </div>
-                    <div class="col-md-2 offset-md-1 col-sm-12">
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
                         <img class="img-fluid" src="{{ "images/dedicated-infrastructure.png" | absURL }}">
                         <p>Dedicated infrastructure</p>
                     </div>
-                    <div class="col-md-2 offset-md-1 col-sm-12">
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
                         <img class="img-fluid" src="{{ "images/bare-metal-servers.png" | absURL }}">
                         <p>Bare-metal servers</p>
                     </div>
@@ -42,25 +42,25 @@
                 <h4>Workloads running on cloud.ca</h4>
 
                 <div class="row workloads">
-                    <div class="col-md-2 offset-md-2 col-sm-12">
+                    <div class="col-lg-2 offset-lg-2 col-sm-12">
                         <p>Dev/Test environments</p>
                     </div>
-                    <div class="col-md-2 offset-md-1 col-sm-12">
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
                         <p>Virtual desktops</p>
                     </div>
-                    <div class="col-md-2 offset-md-1 col-sm-12">
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
                         <p>Legacy applications</p>
                     </div>
                 </div>
 
                 <div class="row workloads">
-                    <div class="col-md-2 offset-md-2 col-sm-12">
+                    <div class="col-lg-2 offset-lg-2 col-sm-12">
                         <p>SaaS platforms</p>
                     </div>
-                    <div class="col-md-2 offset-md-1 col-sm-12">
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
                         <p>Web applications</p>
                     </div>
-                    <div class="col-md-2 offset-md-1 col-sm-12">
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
                         <p>Infrastructure reseller</p>
                     </div>
                 </div>
