--- a/hugo/themes/cca-general/layouts/partials/homepage/first-card.html
+++ b/hugo/themes/cca-general/layouts/partials/homepage/first-card.html
@@ -10,7 +10,7 @@
             <div class="col-lg-4 offset-lg-2 col-sm-8">
                 <h2>Clouds are complex...</h2>
             </div>
-            <div class="col-lg-4 offset-lg-1 col-sm-4 img-triangle">
+            <div class="img-triangle">
                 <img src="{{ "images/triangle-blue-card.png" | absURL }}">
             </div>
         </div>
