--- a/hugo/themes/cca-general/static/css/style.css
+++ b/hugo/themes/cca-general/static/css/style.css
@@ -324,9 +324,9 @@ li {
     /* margin-top: 100px; */
 }
 
-#homepage .first-card .complex-clouds {
+/* #homepage .first-card .complex-clouds {
     overflow: hidden;
-}
+} */
 
 #homepage .first-card h3 {
     padding-top: 230px;
@@ -343,12 +343,40 @@ li {
 #homepage .first-card.fixed .complex-clouds {
     position: fixed;
     top: 100px;
-    left: 15px;
+    left: 0;
+    height: 570px;
 
+    /* Removing left/right margin from Bootstrap  */
     width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
-/*MOBILE FIRST CARD*/
+#homepage .first-card .complex-clouds {
+    position: relative;
+    height: 570px;
+    /* min-width: 1120px; */
+}
+
+#homepage .first-card .img-triangle {
+    position: absolute;
+    top: 70px;
+    right: 120px;
+
+    width: 510px;
+    height: 453px;
+}
+
+/* MEDIUM FIRST CARD */
+@media screen and (max-width : 1024px) {
+    #homepage .first-card .img-triangle {
+        position: absolute;
+        top: 70px;
+        right: -88px;
+    }
+}
+
+/* MOBILE FIRST CARD */
 @media screen and (max-width : 768px) {
 
     .with-line {
@@ -378,14 +406,35 @@ li {
         margin-left: 20px;
     }
 
-    #homepage .img-triangle {
-        margin-top: -100px;
-        margin-left: 100px;
-        padding-top: 0;
-        float: right;
+    #homepage .first-card .complex-clouds {
         position: relative;
+
+        /*
+        In mobile mode, the .complex-clouds container collapses because the
+        .img-triangle becomes position: absolute.  We need to expand this
+        container to the image height (453px) plus whatever bottom "padding"
+        */
+        height: 550px;
+
+        top: 0;
+        left: 0;
+        /* min-width: 500px; */
+    }
+
+    #homepage .first-card.fixed .complex-clouds {
+        top: 0;
+        left: 0px;
+        width: 100%;
+        /* min-width: 500px; */
+    }
+
+    #homepage .first-card .img-triangle {
+        position: absolute;
+        top: 70px;
+        right: -140px;
     }
 }
+
 
 /* SECOND CARD */
 #homepage .second-card {
@@ -407,31 +456,61 @@ li {
     z-index: 200;
 }
 
-#homepage .second-card a {
-    margin: 10px 0 30px 20px;
-    color: #f5f7f1;
-    font-weight: bold;
-}
-
 #homepage .second-card.fixed .title-row-secondcard {
     clip: rect(0, 0, 0, 0);
     padding: 0;
     position: fixed;
     top: 100px;
-    left: 15px;
+    left: 0;
 
     width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 #homepage .second-card .title-row-secondcard {
+    position: relative;
     padding: 100px 0 0 0;
+}
+
+#homepage .title-row-secondcard .but-they-dont-have-to-be {
+    margin-bottom: 223px;
+}
+
+#homepage .second-card.fixed .title-row-secondcard .img-cube {
+    position: absolute;
+    top: 215px;
+    right: 258px;
+}
+
+#homepage .second-card .title-row-secondcard .img-cube {
+    width: 241px;
+    height: 276px;
+
+    position: absolute;
+    top: 315px;
+    right: 258px;
+}
+
+#homepage .second-card .title-row-secondcard .img-cube img {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#homepage .second-card .title-row-secondcard img.img-cube-mobile {
+    display: none;
+}
+
+#homepage .second-card .title-row-secondcard img.img-cube-desktop {
+     position: relative;
 }
 
 #homepage .second-card.fixed .text-row-secondcard {
     opacity: 0;
     transition: all linear 0.5s;
 
-    position: absolute;;
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -446,6 +525,12 @@ li {
     bottom: 0;
     left: 0;
     width: 100%;
+}
+
+#homepage .second-card a {
+    margin: 10px 0 30px 20px;
+    color: #f5f7f1;
+    font-weight: bold;
 }
 
 #homepage .second-card .text-row-secondcard li.important-item {
@@ -472,39 +557,63 @@ li {
     font-weight: normal;
 }
 
-#homepage .img-cube-mobile {
-        display: none;
+/* MEDIUM SECOND CARD */
+@media screen and (max-width : 1024px) {
+    #homepage .second-card.fixed .title-row-secondcard .img-cube {
+        position: absolute;
+        top: 215px;
+        right: 50px;
+    }
+
+    #homepage .second-card .title-row-secondcard .img-cube {
+        position: absolute;
+        top: 315px;
+        right: 50px;
+    }
 }
 
-#homepage .but-they-dont-have-to-be {
-    margin-bottom: 223px;
-}
- #homepage .img-cube-desktop {
-     position: relative;
-     margin: 0 0 -540px 131px;
-}
-
-/*MOBILE SECOND CARD*/
+/* MOBILE SECOND CARD */
 @media screen and (max-width : 768px) {
-    #homepage #title-row-secondcard {
-    color: #ec1c23;
-    background-color: #f5f7f1;
-    padding: 100px 0 10px 0;
+    #homepage .second-card {
+        background: #f5f7f1;
+    }
+
+    #homepage .second-card.fixed .title-row-secondcard {
+        top: 0;
+    }
+
+    #homepage .second-card .title-row-secondcard {
+        color: #ec1c23;
+        padding: 0 0 10px 0;
+
+        /*
+        Height won't be properly calculated as .img-cube is
+        position: absolute.  This height is used to offset that problem.
+        */
+        height: 500px;
     }
 
     #homepage .second-card.card-section {
         padding-top: 0;
     }
 
-    #homepage .img-cube-desktop {
+    #homepage .second-card.fixed .title-row-secondcard .img-cube,
+    #homepage .second-card .title-row-secondcard .img-cube {
+        position: absolute;
+        top: 220px;
+        right: -2px;
+    }
+
+    #homepage .second-card .title-row-secondcard img.img-cube-desktop {
         display: none;
     }
 
-    #homepage .img-cube-mobile {
-        margin: 70px 0 30px -20px;
-        float: right;
-        position: relative;
+    #homepage .second-card .title-row-secondcard img.img-cube-mobile {
         display: block;
+
+        /* position: absolute; */
+        /* top: 0; */
+        /* right: 0; */
     }
 
     #homepage .second-card .text-row-secondcard {
@@ -538,6 +647,8 @@ li {
         text-align: center;
     }
 }
+
+
 /* THIRD CARD */
 #homepage .features-card {
     background-color: #f5f7f1;
@@ -639,6 +750,10 @@ li {
     }
 
     #homepage .call-to-action-card {
+        padding: 0;
+    }
+
+    #homepage .call-to-action-card .cta-block {
         padding: 0;
     }
 
@@ -762,6 +877,10 @@ li {
          padding: 40px 10px;
     }
 
+    .footer .social-icons{
+        padding-left: 20px;
+        }
+
     /* Toggle Buttons */
     .footer .toggle-footer::before,
     .footer .toggle-footer::after {
@@ -773,7 +892,7 @@ li {
         opacity: 0.5;
 
         position: absolute;
-        left: 11%;
+        left: 90px;
         transform: translateX(-25px);
 
         border-radius: 25px;
@@ -784,7 +903,7 @@ li {
         min-height: 40px;
         color: #6d6e71;
         font-size: 18px;
-        padding-left: 0;
+        padding-left: 20px;
     }
 
     .footer .toggle-footer .btn.collapse-footer.collapsed {
@@ -824,6 +943,7 @@ li {
         background-color: transparent;
         border: none;
         position: relative;
+        padding-left: 15px;
     }
     .footer #desktop-menu {
         display: none;
